examples/test/testpolicy16949.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16949
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key11: value18
      key43: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value6
          key34: value40
      podSelector:
        matchLabels:
          key9: value32
          key37: value8
